[gd_scene load_steps=27 format=2]

[ext_resource path="res://Scripts/game.gd" type="Script" id=1]
[ext_resource path="res://Assets/Scary Level/bg2.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Entrance.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Scary Level/Laundry.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Scary Level/Plant.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Scary Level/Car.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Scary Level/Chair.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Scary Level/Cabinet.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Scary Level/Bed.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Boundary.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/HealthBar.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Timer.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/EscapeDialog.tscn" type="PackedScene" id=13]
[ext_resource path="res://SpaceMono-Bold.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Scenes/GameOverDialog.tscn" type="PackedScene" id=15]
[ext_resource path="res://analog/analog.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/SoundPlayer.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Scary Level/Noise/Trap.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scenes/Scary Level/Noise/Doll.tscn" type="PackedScene" id=19]
[ext_resource path="res://Scenes/Scary Level/Noise/Vase.tscn" type="PackedScene" id=20]
[ext_resource path="res://Scenes/Scary Level/Noise/Banana.tscn" type="PackedScene" id=21]
[ext_resource path="res://Scenes/Scary Level/Noise/Bottle.tscn" type="PackedScene" id=22]
[ext_resource path="res://Scenes/Scary Level/Noise/Skull.tscn" type="PackedScene" id=23]
[ext_resource path="res://Scenes/player2.tscn" type="PackedScene" id=24]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.28125, 0.28125, 0.28125, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Corner Radius" ]

[sub_resource type="DynamicFont" id=2]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 14 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="game" type="Node2D"]

script = ExtResource( 1 )
max_prizes = 10
level_type = "scary"

[node name="Background" type="Sprite" parent="." index="0"]

position = Vector2( -2.65381, -1.51587 )
rotation = 0.000694654
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Animation", "Offset", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Entrance" parent="." index="1" instance=ExtResource( 3 )]

visible = false
position = Vector2( 5216.6, 1090.68 )
scale = Vector2( 1, 4 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="tree_container" type="Node" parent="." index="2"]

[node name="prize_container" type="Node" parent="." index="3"]

[node name="prize_spawn_container" type="Node" parent="." index="4"]

editor/display_folded = true

[node name="spawn1" type="Node2D" parent="prize_spawn_container" index="0"]

position = Vector2( 2744.09, 302.045 )

[node name="spawn2" type="Node2D" parent="prize_spawn_container" index="1"]

position = Vector2( 4673.68, 307.076 )

[node name="spawn3" type="Node2D" parent="prize_spawn_container" index="2"]

position = Vector2( 3732.79, 143.552 )

[node name="spawn4" type="Node2D" parent="prize_spawn_container" index="3"]

position = Vector2( 5186.89, 171.225 )

[node name="spawn5" type="Node2D" parent="prize_spawn_container" index="4"]

position = Vector2( 4298.83, 649.219 )

[node name="spawn6" type="Node2D" parent="prize_spawn_container" index="5"]

position = Vector2( 3136.55, 656.766 )

[node name="spawn7" type="Node2D" parent="prize_spawn_container" index="6"]

position = Vector2( 3669.89, 767.459 )

[node name="spawn8" type="Node2D" parent="prize_spawn_container" index="7"]

position = Vector2( 3257.31, 1564.95 )

[node name="spawn9" type="Node2D" parent="prize_spawn_container" index="8"]

position = Vector2( 3765.49, 1557.41 )

[node name="spawn10" type="Node2D" parent="prize_spawn_container" index="9"]

position = Vector2( 4263.61, 1587.59 )

[node name="spawn11" type="Node2D" parent="prize_spawn_container" index="10"]

position = Vector2( 2721.45, 1544.83 )

[node name="spawn12" type="Node2D" parent="prize_spawn_container" index="11"]

position = Vector2( 2295.92, 719.288 )

[node name="spawn13" type="Node2D" parent="prize_spawn_container" index="12"]

position = Vector2( 2849.76, 666.829 )

[node name="spawn14" type="Node2D" parent="prize_spawn_container" index="13"]

position = Vector2( 1888.74, 274.372 )

[node name="spawn15" type="Node2D" parent="prize_spawn_container" index="14"]

position = Vector2( 738.398, 333.805 )

[node name="spawn16" type="Node2D" parent="prize_spawn_container" index="15"]

position = Vector2( 335.563, 365.487 )

[node name="spawn17" type="Node2D" parent="prize_spawn_container" index="16"]

position = Vector2( 125.936, 730.198 )

[node name="spawn18" type="Node2D" parent="prize_spawn_container" index="17"]

position = Vector2( 264.982, 1408.98 )

[node name="spawn19" type="Node2D" parent="prize_spawn_container" index="18"]

position = Vector2( 539.199, 1886.97 )

[node name="spawn20" type="Node2D" parent="prize_spawn_container" index="19"]

position = Vector2( 939.204, 1869.36 )

[node name="spawn21" type="Node2D" parent="prize_spawn_container" index="20"]

position = Vector2( 429.881, 2397.15 )

[node name="spawn22" type="Node2D" parent="prize_spawn_container" index="21"]

position = Vector2( 1032.28, 2697.04 )

[node name="spawn23" type="Node2D" parent="prize_spawn_container" index="22"]

position = Vector2( 124.1, 2193.89 )

[node name="spawn24" type="Node2D" parent="prize_spawn_container" index="23"]

position = Vector2( 1942.99, 2239.17 )

[node name="spawn25" type="Node2D" parent="prize_spawn_container" index="24"]

position = Vector2( 1953.05, 2699.56 )

[node name="spawn26" type="Node2D" parent="prize_spawn_container" index="25"]

position = Vector2( 2317.83, 2297.04 )

[node name="spawn27" type="Node2D" parent="prize_spawn_container" index="26"]

position = Vector2( 4073.92, 2395.31 )

[node name="spawn28" type="Node2D" parent="prize_spawn_container" index="27"]

position = Vector2( 4166.77, 2563.63 )

[node name="spawn29" type="Node2D" parent="prize_spawn_container" index="28"]

position = Vector2( 3522.88, 2654.27 )

[node name="spawn30" type="Node2D" parent="prize_spawn_container" index="29"]

position = Vector2( 2911.55, 2548.61 )

[node name="spawn31" type="Node2D" parent="prize_spawn_container" index="30"]

position = Vector2( 3241.11, 2752.39 )

[node name="spawn32" type="Node2D" parent="prize_spawn_container" index="31"]

position = Vector2( 4441.34, 2238.88 )

[node name="spawn33" type="Node2D" parent="prize_spawn_container" index="32"]

position = Vector2( 4939.25, 2249.24 )

[node name="spawn34" type="Node2D" parent="prize_spawn_container" index="33"]

position = Vector2( 4695.22, 1937.28 )

[node name="spawn35" type="Node2D" parent="prize_spawn_container" index="34"]

position = Vector2( 4629.81, 2707.1 )

[node name="spawn36" type="Node2D" parent="prize_spawn_container" index="35"]

position = Vector2( 1158.07, 1610.24 )

[node name="spawn37" type="Node2D" parent="prize_spawn_container" index="36"]

position = Vector2( 1950.53, 1856.78 )

[node name="spawn38" type="Node2D" parent="prize_spawn_container" index="37"]

position = Vector2( 1433.39, 782.554 )

[node name="spawn39" type="Node2D" parent="prize_spawn_container" index="38"]

position = Vector2( 1365.46, 266.825 )

[node name="furniture_container" type="Node" parent="." index="5"]

editor/display_folded = true

[node name="RegularItem9" parent="furniture_container" index="0" instance=ExtResource( 4 )]

position = Vector2( 2287.34, 2409.08 )
rotation = 0.000460441

[node name="RegularItem10" parent="furniture_container" index="1" instance=ExtResource( 4 )]

position = Vector2( 2743.9, 2725.35 )
rotation = 0.000460441

[node name="RegularItem11" parent="furniture_container" index="2" instance=ExtResource( 4 )]

position = Vector2( 3656.59, 2414.35 )
rotation = 0.000460441

[node name="RegularItem12" parent="furniture_container" index="3" instance=ExtResource( 4 )]

position = Vector2( 4165.67, 2729.92 )
rotation = 0.000460441

[node name="RegularItem13" parent="furniture_container" index="4" instance=ExtResource( 5 )]

position = Vector2( 3961.76, 2173.11 )
rotation = 0.000460441

[node name="RegularItem14" parent="furniture_container" index="5" instance=ExtResource( 5 )]

position = Vector2( 2472.53, 2184.35 )
rotation = 0.000460441

[node name="RegularItem15" parent="furniture_container" index="6" instance=ExtResource( 5 )]

position = Vector2( 2241.23, 2717.92 )
rotation = 0.000460441

[node name="RegularItem16" parent="furniture_container" index="7" instance=ExtResource( 5 )]

position = Vector2( 2859.1, 1157.43 )
rotation = 0.000460441

[node name="RegularItem17" parent="furniture_container" index="8" instance=ExtResource( 5 )]

position = Vector2( 2161.7, 595.105 )
rotation = 0.000460441

[node name="RegularItem18" parent="furniture_container" index="9" instance=ExtResource( 6 )]

position = Vector2( 54.3336, 79.8315 )
rotation = 0.000460441

[node name="RegularItem19" parent="furniture_container" index="10" instance=ExtResource( 7 )]

position = Vector2( 671.393, 147.336 )
rotation = 0.000460441

[node name="RegularItem6" parent="furniture_container" index="11" instance=ExtResource( 8 )]

position = Vector2( 4077.87, 2194.3 )
rotation = 0.000460441

[node name="RegularItem20" parent="furniture_container" index="12" instance=ExtResource( 6 )]

position = Vector2( -4.11313, 1062.7 )
rotation = -0.515543

[node name="RegularItem8" parent="furniture_container" index="13" instance=ExtResource( 9 )]

position = Vector2( 2268.61, 2353.76 )
rotation = -1.60656

[node name="RegularItem7" parent="furniture_container" index="14" instance=ExtResource( 9 )]

position = Vector2( 356.409, 2304.01 )
rotation = -1.60656

[node name="RegularItem5" parent="furniture_container" index="15" instance=ExtResource( 5 )]

position = Vector2( 1915.01, 420.288 )
rotation = -1.58848

[node name="RegularItem4" parent="furniture_container" index="16" instance=ExtResource( 5 )]

position = Vector2( 1909.5, 329.465 )
rotation = -1.5727

[node name="RegularItem" parent="furniture_container" index="17" instance=ExtResource( 7 )]

position = Vector2( 549.584, 365.83 )
rotation = -1.5727

[node name="RegularItem3" parent="furniture_container" index="18" instance=ExtResource( 6 )]

position = Vector2( 4280.26, 1233.98 )
rotation = -2.81215

[node name="RegularItem2" parent="furniture_container" index="19" instance=ExtResource( 6 )]

position = Vector2( 3688.51, 900.354 )
rotation = -0.294402

[node name="wall_container" type="Node" parent="." index="6"]

editor/display_folded = true

[node name="Wall" parent="wall_container" index="0" instance=ExtResource( 10 )]

position = Vector2( 3684.82, 524.39 )
scale = Vector2( 7.77055, 1.48986 )

[node name="Wall2" parent="wall_container" index="1" instance=ExtResource( 10 )]

position = Vector2( 1287.55, 96.9852 )
scale = Vector2( 7.77055, 1.48986 )

[node name="Wall3" parent="wall_container" index="2" instance=ExtResource( 10 )]

position = Vector2( 646.833, 2064.95 )
scale = Vector2( 5.71029, 1.48986 )

[node name="Wall4" parent="wall_container" index="3" instance=ExtResource( 10 )]

position = Vector2( 1826.1, 2063.05 )
scale = Vector2( 3.08681, 1.48986 )

[node name="Wall30" parent="wall_container" index="4" instance=ExtResource( 10 )]

position = Vector2( 1172.5, 2875.58 )
scale = Vector2( 1.6964, 1.48986 )

[node name="Wall31" parent="wall_container" index="5" instance=ExtResource( 10 )]

position = Vector2( 392.398, 2885.12 )
scale = Vector2( 1.21957, 1.48986 )

[node name="Wall32" parent="wall_container" index="6" instance=ExtResource( 10 )]

position = Vector2( 3011.19, 2330.08 )
scale = Vector2( 1.21957, 1.48986 )

[node name="Wall33" parent="wall_container" index="7" instance=ExtResource( 10 )]

position = Vector2( 3486.12, 2486.48 )
scale = Vector2( 1.21957, 1.48986 )

[node name="Wall24" parent="wall_container" index="8" instance=ExtResource( 10 )]

position = Vector2( 297.926, 1226.08 )
scale = Vector2( 2.14144, 1.48986 )

[node name="Wall5" parent="wall_container" index="9" instance=ExtResource( 10 )]

position = Vector2( 2330.44, 2121.94 )
scale = Vector2( 2.34479, 1.48986 )

[node name="Wall6" parent="wall_container" index="10" instance=ExtResource( 10 )]

position = Vector2( 3880.5, 2112.44 )
scale = Vector2( 4.36309, 1.48986 )

[node name="Wall7" parent="wall_container" index="11" instance=ExtResource( 10 )]

position = Vector2( 3727.58, 1790.45 )
scale = Vector2( 8.31065, 2.17266 )

[node name="Wall9" parent="wall_container" index="12" instance=ExtResource( 10 )]

position = Vector2( 3460.65, 2875.4 )
scale = Vector2( 18.2241, 1.37128 )

[node name="Wall39" parent="wall_container" index="13" instance=ExtResource( 10 )]

position = Vector2( 2686.66, 3000.25 )
scale = Vector2( 29.2604, 1.37128 )

[node name="Wall40" parent="wall_container" index="14" instance=ExtResource( 10 )]

position = Vector2( 2565.28, 3.78198 )
scale = Vector2( 29.2604, 1.37128 )

[node name="Wall8" parent="wall_container" index="15" instance=ExtResource( 10 )]

position = Vector2( 2350.39, 535.787 )
scale = Vector2( 2.61191, 1.48986 )

[node name="Wall10" parent="wall_container" index="16" instance=ExtResource( 10 )]

position = Vector2( 2713.34, 1302.68 )
scale = Vector2( 3.30325, 1.48986 )

[node name="Wall36" parent="wall_container" index="17" instance=ExtResource( 10 )]

position = Vector2( 4685.04, 1731.83 )
scale = Vector2( 2.38674, 1.48986 )

[node name="Wall38" parent="wall_container" index="18" instance=ExtResource( 10 )]

position = Vector2( 5070.02, 1987.69 )
rotation = 0.89205
scale = Vector2( 3.2259, 1.48986 )

[node name="Wall11" parent="wall_container" index="19" instance=ExtResource( 10 )]

position = Vector2( 3016.84, 1487.48 )
rotation = 1.5708
scale = Vector2( 3.10404, 1.48986 )

[node name="Wall12" parent="wall_container" index="20" instance=ExtResource( 10 )]

position = Vector2( 3012.39, 707.96 )
rotation = 1.5708
scale = Vector2( 1.66682, 1.48986 )

[node name="Wall13" parent="wall_container" index="21" instance=ExtResource( 10 )]

position = Vector2( 2079.39, 516.809 )
rotation = 1.5708
scale = Vector2( 4.32268, 1.48986 )

[node name="Wall14" parent="wall_container" index="22" instance=ExtResource( 10 )]

position = Vector2( 481.196, 377.63 )
rotation = 1.5708
scale = Vector2( 2.99125, 1.48986 )

[node name="Wall15" parent="wall_container" index="23" instance=ExtResource( 10 )]

position = Vector2( 484.983, 1123.71 )
rotation = 1.5708
scale = Vector2( 1.216, 1.48986 )

[node name="Wall16" parent="wall_container" index="24" instance=ExtResource( 10 )]

position = Vector2( 729.257, 1873.48 )
rotation = 1.5708
scale = Vector2( 1.86401, 1.48986 )

[node name="Wall17" parent="wall_container" index="25" instance=ExtResource( 10 )]

position = Vector2( 83.5416, 1642.46 )
rotation = 1.5708
scale = Vector2( 4.40852, 1.48986 )

[node name="Wall18" parent="wall_container" index="26" instance=ExtResource( 10 )]

position = Vector2( 2158.89, 2484.16 )
rotation = 1.5708
scale = Vector2( 3.60967, 1.48986 )

[node name="Wall25" parent="wall_container" index="27" instance=ExtResource( 10 )]

position = Vector2( 278.246, 2784.07 )
rotation = 1.5708
scale = Vector2( 1.15149, 1.48986 )

[node name="Wall26" parent="wall_container" index="28" instance=ExtResource( 10 )]

position = Vector2( 4310.38, 2206.15 )
rotation = 1.5708
scale = Vector2( 1.15149, 1.48986 )

[node name="Wall27" parent="wall_container" index="29" instance=ExtResource( 10 )]

position = Vector2( 4325.64, 2784.07 )
rotation = 1.5708
scale = Vector2( 1.15149, 1.48986 )

[node name="Wall28" parent="wall_container" index="30" instance=ExtResource( 10 )]

position = Vector2( 1548.54, 2198.52 )
rotation = 1.5708
scale = Vector2( 1.15149, 1.48986 )

[node name="Wall37" parent="wall_container" index="31" instance=ExtResource( 10 )]

position = Vector2( 283.968, 2161.67 )
rotation = 1.5708
scale = Vector2( 1.19209, 1.48986 )

[node name="Wall29" parent="wall_container" index="32" instance=ExtResource( 10 )]

position = Vector2( 1249.09, 2793.61 )
rotation = 1.5708
scale = Vector2( 1.15149, 1.48986 )

[node name="Wall34" parent="wall_container" index="33" instance=ExtResource( 10 )]

position = Vector2( 2902.76, 2879.44 )
rotation = 1.5708
scale = Vector2( 1.15149, 1.48986 )

[node name="Wall35" parent="wall_container" index="34" instance=ExtResource( 10 )]

position = Vector2( 3583.68, 2900.42 )
rotation = 1.5708
scale = Vector2( 1.15149, 1.48986 )

[node name="Wall19" parent="wall_container" index="35" instance=ExtResource( 10 )]

position = Vector2( 3092.46, 2581.68 )
rotation = 1.5708
scale = Vector2( 2.51493, 1.48986 )

[node name="Wall20" parent="wall_container" index="36" instance=ExtResource( 10 )]

position = Vector2( 3406.8, 2665 )
rotation = 1.5708
scale = Vector2( 2.04153, 1.48986 )

[node name="Wall21" parent="wall_container" index="37" instance=ExtResource( 10 )]

position = Vector2( 5251.16, 2530.55 )
rotation = 1.5708
scale = Vector2( 3.16586, 1.48986 )

[node name="Wall41" parent="wall_container" index="38" instance=ExtResource( 10 )]

position = Vector2( 5348.27, 1519.01 )
rotation = 1.5708
scale = Vector2( 16.352, 1.48986 )

[node name="Wall42" parent="wall_container" index="39" instance=ExtResource( 10 )]

position = Vector2( -20.4133, 1557.16 )
rotation = 1.5708
scale = Vector2( 16.352, 1.48986 )

[node name="Wall22" parent="wall_container" index="40" instance=ExtResource( 10 )]

position = Vector2( 4472.89, 1661.39 )
rotation = 1.5708
scale = Vector2( 1.56814, 1.48986 )

[node name="Wall23" parent="wall_container" index="41" instance=ExtResource( 10 )]

position = Vector2( 4459.64, 581.098 )
rotation = 1.5708
scale = Vector2( 0.828452, 1.48986 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="7"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="HealthBar" parent="CanvasLayer" index="0" instance=ExtResource( 11 )]

position = Vector2( 10, 10.8091 )

[node name="Timer" parent="CanvasLayer" index="1" instance=ExtResource( 12 )]

position = Vector2( 1115.49, 26.3789 )

[node name="EscapeDialog" parent="CanvasLayer" index="2" instance=ExtResource( 13 )]

visible = false

[node name="Dialog" type="Panel" parent="CanvasLayer" index="3"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_top = 100.0
margin_right = 1180.0
margin_bottom = 620.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 1 )
_sections_unfolded = [ "custom_styles" ]
__meta__ = {
"_edit_lock_": true
}

[node name="ScreenContainer" type="VBoxContainer" parent="CanvasLayer/Dialog" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_top = 50.0
margin_right = 980.0
margin_bottom = 470.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="Title" type="Label" parent="CanvasLayer/Dialog/ScreenContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 880.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "You Escaped!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Dialog/ScreenContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 49.0
margin_right = 880.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 13

[node name="GameOverDialog" parent="CanvasLayer" index="4" instance=ExtResource( 15 )]

visible = false

[node name="UI" type="CanvasLayer" parent="." index="8"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="AreaAnalogRight" type="Control" parent="UI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 75.0
margin_top = 73.0
margin_right = 394.0
margin_bottom = 642.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Grow Direction", "Rect", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="AnalogRight" parent="UI/AreaAnalogRight" index="0" instance=ExtResource( 16 )]

position = Vector2( 64.2845, 496.744 )
isDynamicallyShowing = true
listenerNodePath = "/root/game/player"
padname = "rightPad"

[node name="SoundPlayer" parent="." index="9" instance=ExtResource( 17 )]

[node name="NoiseItems" type="Node2D" parent="." index="10"]

[node name="NoiseItem7" parent="NoiseItems" index="0" instance=ExtResource( 18 )]

position = Vector2( 3185.99, 1309.95 )

[node name="NoiseItem8" parent="NoiseItems" index="1" instance=ExtResource( 18 )]

position = Vector2( 2513.17, 680.842 )

[node name="NoiseItem9" parent="NoiseItems" index="2" instance=ExtResource( 18 )]

position = Vector2( 329.517, 1458.11 )

[node name="NoiseItem10" parent="NoiseItems" index="3" instance=ExtResource( 19 )]

position = Vector2( 2343.14, 1093.77 )

[node name="NoiseItem11" parent="NoiseItems" index="4" instance=ExtResource( 19 )]

position = Vector2( 2199.83, 1173.92 )

[node name="NoiseItem12" parent="NoiseItems" index="5" instance=ExtResource( 19 )]

position = Vector2( 2515.6, 1137.49 )

[node name="NoiseItem13" parent="NoiseItems" index="6" instance=ExtResource( 19 )]

position = Vector2( 1298.68, 943.172 )

[node name="NoiseItem14" parent="NoiseItems" index="7" instance=ExtResource( 19 )]

position = Vector2( 1155.37, 1069.48 )

[node name="NoiseItem15" parent="NoiseItems" index="8" instance=ExtResource( 19 )]

position = Vector2( 1264.67, 1278.37 )

[node name="NoiseItem16" parent="NoiseItems" index="9" instance=ExtResource( 19 )]

position = Vector2( 1458.99, 1263.8 )

[node name="NoiseItem17" parent="NoiseItems" index="10" instance=ExtResource( 19 )]

position = Vector2( 1510, 1074.34 )

[node name="NoiseItem18" parent="NoiseItems" index="11" instance=ExtResource( 20 )]

position = Vector2( 1349.69, 1115.63 )

[node name="NoiseItem19" parent="NoiseItems" index="12" instance=ExtResource( 21 )]

position = Vector2( 4570.51, 2014.35 )

[node name="NoiseItem20" parent="NoiseItems" index="13" instance=ExtResource( 22 )]

position = Vector2( 4662.81, 549.677 )

[node name="NoiseItem21" parent="NoiseItems" index="14" instance=ExtResource( 22 )]

position = Vector2( 1077.64, 707.561 )

[node name="NoiseItem22" parent="NoiseItems" index="15" instance=ExtResource( 22 )]

position = Vector2( 703.579, 2201.38 )

[node name="NoiseItem23" parent="NoiseItems" index="16" instance=ExtResource( 22 )]

position = Vector2( 781.307, 2378.7 )

[node name="NoiseItem24" parent="NoiseItems" index="17" instance=ExtResource( 22 )]

position = Vector2( 907.613, 2274.25 )

[node name="NoiseItem26" parent="NoiseItems" index="18" instance=ExtResource( 22 )]

position = Vector2( 939.19, 2500.15 )

[node name="NoiseItem27" parent="NoiseItems" index="19" instance=ExtResource( 19 )]

position = Vector2( 3278.29, 1758.3 )
scale = Vector2( 3, 3 )

[node name="NoiseItem25" parent="NoiseItems" index="20" instance=ExtResource( 22 )]

position = Vector2( 560.27, 2410.27 )

[node name="NoiseItem" parent="NoiseItems" index="21" instance=ExtResource( 23 )]

position = Vector2( 3243.8, 1604.34 )

[node name="NoiseItem2" parent="NoiseItems" index="22" instance=ExtResource( 23 )]

position = Vector2( 3297.24, 1533.9 )

[node name="NoiseItem3" parent="NoiseItems" index="23" instance=ExtResource( 23 )]

position = Vector2( 3350.68, 1609.2 )

[node name="NoiseItem4" parent="NoiseItems" index="24" instance=ExtResource( 23 )]

position = Vector2( 503.918, 795.49 )

[node name="NoiseItem5" parent="NoiseItems" index="25" instance=ExtResource( 23 )]

position = Vector2( 1764.56, 1720.93 )

[node name="NoiseItem6" parent="NoiseItems" index="26" instance=ExtResource( 23 )]

position = Vector2( 561.241, 2167.38 )

[node name="NoiseItem28" parent="NoiseItems" index="27" instance=ExtResource( 23 )]

position = Vector2( 1962.76, 2130.94 )

[node name="NoiseItem29" parent="NoiseItems" index="28" instance=ExtResource( 23 )]

position = Vector2( 3801.5, 2179.52 )

[node name="player" parent="." index="11" instance=ExtResource( 24 )]

editor/display_folded = true
position = Vector2( 5228.48, 1089.54 )
scale = Vector2( 0.035, 0.035 )
z_index = 1
_sections_unfolded = [ "Collision", "Transform", "Z Index" ]

[node name="Camera2D" type="Camera2D" parent="player" index="2"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = 0
limit_top = 0
limit_right = 5336
limit_bottom = 3000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Limit", "Transform" ]

[node name="RegularItem2" parent="." index="12" instance=ExtResource( 5 )]

position = Vector2( 574.923, 1333.2 )

[node name="RegularItem3" parent="." index="13" instance=ExtResource( 5 )]

position = Vector2( 117.664, 844.408 )

[node name="RegularItem4" parent="." index="14" instance=ExtResource( 5 )]

position = Vector2( 189.744, 839.903 )

[node name="RegularItem5" parent="." index="15" instance=ExtResource( 5 )]

position = Vector2( 152.171, 808.34 )

[node name="RegularItem6" parent="." index="16" instance=ExtResource( 5 )]

position = Vector2( 157.095, 876.04 )

[node name="RegularItem7" parent="." index="17" instance=ExtResource( 8 )]

position = Vector2( 505.055, 2833.21 )
rotation = 3.13163

[node name="RegularItem8" parent="." index="18" instance=ExtResource( 8 )]

position = Vector2( 1626.24, 2140.42 )

[node name="RegularItem9" parent="." index="19" instance=ExtResource( 4 )]

position = Vector2( 1988.61, 2725.33 )

[node name="RegularItem10" parent="." index="20" instance=ExtResource( 6 )]

position = Vector2( 4836.07, 2616.76 )


